# crackc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  main
.github/workflows/: build.yml  crackc.yml
docs/: chapter-1.md
src/: aruco.cpp  main.c  main.cpp  qt.cpp
